[package]
name = "data-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
derive-new = "0.7.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = "25.0.2"
wasmtime-wasi = "25.0.2"
